--- a/index.css
+++ b/index.css
@@ -13,7 +13,8 @@ form {
     width: auto;
     gap: 1rem;
     justify-content: center;
-    margin: 50px;
+    margin: 30px;
+
   }
   .border{
     border: 1px solid rgb(255, 255, 255);
@@ -27,10 +28,54 @@ form {
     padding: 30px;
   }
 
-  textarea {
-    resize: none;
-  }
   form h1{
+
       text-align: center;
       color:var(--primary);
   }
+
+  textarea {
+    resize: none;
+  }
+  .border label {
+      color: rgb(101, 98, 98);
+      font-size: 12px;
+  }
+  input {
+    justify-content: center;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    border-bottom: 1px solid var(--primary);
+    padding-bottom: 15px;
+    padding-top: 2px;
+    padding-left: 5px;
+    width: 300px;
+  }
+
+  input:focus{
+    outline:none;
+    background-color: rgba(220, 220, 220, 0.278);
+    border-radius: 8px;
+  }
+  select {
+        background-color: white;
+        border-top: transparent;
+        border-left: transparent;
+        border-right: transparent;
+        border-bottom: thin solid var(--primary);
+        border-radius: 0;
+        width: 300px;
+        display: inline-block;
+        font: bolder;
+        line-height: 1.5em;
+        padding: 0.5em 3.5em 0.5em 1em;
+        margin: 0;      
+        -webkit-appearance:none;        
+      
+  }
+select:focus {
+    outline:none;
+    background-color: rgba(220, 220, 220, 0.278);
+    border-radius: 8px;
+}
